--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@nhui/cn",
   "version": "0.0.1",
   "description": "",
+  "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -10,12 +11,14 @@
     "test": "vitest run",
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc --noEmit",
-    "ci": "npm run lint && npm run test && npm run build"
+    "ci": "npm run lint && npm run test && npm run build",
+    "release": "npm run ci && changeset publish"
   },
   "keywords": [],
   "author": "Nathan Hui",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@types/node": "^20.9.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
