--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nhui/cn",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "private": false,
   "main": "./dist/index.js",
@@ -16,7 +16,7 @@
   },
   "keywords": [],
   "author": "Nathan Hui",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@types/node": "^20.9.0",
