--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nhui/cn",
-  "version": "0.0.2",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Utililty for combining tailwind classes using clsx and tailwind-merge",
   "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -14,12 +14,25 @@
     "ci": "npm run lint && npm run test && npm run build",
     "release": "npm run ci && changeset publish"
   },
-  "keywords": [],
+  "keywords": [
+    "clsx",
+    "tailwind",
+    "tailwind-merge"
+  ],
   "author": "Nathan Hui",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nhui98/cn"
+  },
+  "peerDependencies": {
+    "clsx": "^2"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@types/node": "^20.9.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
